# find_mpi_cray_wo_wrappers

./: CMakeLists.txt  README.md
Modules/: FindMPI.cmake
